--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -5,6 +5,8 @@ on:
     - cron: "0 */12 * * *"
   workflow_dispatch: # Allow manual trigger
 
+permissions:
+  contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
